<resources>
    <string name="app_name">Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>



    <string name="profile_name_text">John Doe</string>
    <string name="profile_email_text">johndoe@gmail.com</string>
    <string name="profile_phone_text">+1 (123) 456-7890</string>
    <string name="event_description_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
    <string name="event_rules_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</string>
    <string name="event_deadline_text">09-18-2024</string>
    <string name="geolocation_verification_text"><u>Location Verification Required</u></string>
    <string name="event_name_text">EDM Festival</string>
    <string name="event_countdown_text">Starts in: %1$sd: %2$sh: %3$ss</string>
    <string name="event_price_text">Free</string>
    <string name="create_event_name_text">Enter Event Name</string>
    <string name="create_event_details_text">Enter Event Details</string>
    <string name="create_event_rules_text">Enter Event Rules</string>
    <string name="create_event_deadline_text"> </string>
    <string name="create_event_entrants_num_text"> </string>
    <string name="create_event_attendees_num_text"> </string>
    <string name="edit_event_attendees_num_text"> </string>
    <string name="edit_event_entrants_num_text"> </string>
    <string name="send_notification_text" />
    <string name="organiser_profile_list_object_name">John Doe</string>
    <string name="admin_profile_list_object_name">Admin · John Doe</string>
    <string name="notification_text">EDM Fest: You\'re in!</string>
    <string name="notification_time_text">20 min ago</string>
    <string name="next">og_next</string>
    <string name="previous">og previous</string>
    <string name="first_fragment_label">first frag label</string>
    <string name="second_fragment_label">second frag label</string>
    <string name="create_facility_name_text">Enter Facility Name</string>
    <string name="create_facility_details_text">Enter Facility Details</string>
    <string name="Not_a_user"><u>Not a User? Signup Here</u>.</string>
    <string name="not_an_organizer">Currently, you are not an organizer. If you want to become an organizer you need to have a facility. Click on "Create" Button to create a facility right now</string>

    <string-array name="dropdown_items">
        <item>Entrants</item>
        <item>Waiting</item>
        <item>Selected</item>
        <item>Cancelled</item>
        <item>Attendees</item>
    </string-array>

</resources>