<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/GenericText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_event"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        app:tint="#404040"
        app:tintMode="multiply"
        android:layout_marginHorizontal="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:layout_marginHorizontal="5dp">

        <TextView
            android:id="@+id/available_event_name_text"
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="@string/event_name_text"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/available_event_description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/available_event_date_text"
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="@string/event_deadline_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/available_event_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/available_event_description_text"
            style="@style/GenericText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/event_description_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/available_event_price_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/available_event_price_text"
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="@string/event_price_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
