<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:clipToPadding="false"
        android:background="@color/lucky_background">


    <ImageView
        android:id="@+id/event_picture_organiser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="-32dp"
        android:layout_marginEnd="-32dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_event"
        app:tint="#404040"
        app:tintMode="multiply" />

    <include
        android:id="@+id/notification_top_bar"
        layout="@layout/top_bar_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="Details"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_price_view_organiser" />

    <TextView
        android:id="@+id/event_name_view_organiser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="@string/event_name_text"
        android:textAlignment="center"
        android:textColor="@color/lucky_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_top_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="Rules"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_details_view_organiser" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="Deadline"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_rules_view_organiser" />

    <TextView
        android:id="@+id/event_details_view_organiser"
        android:layout_width="361dp"
        android:layout_height="28dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="@string/event_description_text"
        android:textColor="@color/lucky_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/event_rules_view_organiser"
        android:layout_width="371dp"
        android:layout_height="31dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="@string/event_rules_text"
        android:textColor="@color/lucky_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/event_deadline_view_organiser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="@string/event_deadline_text"
        android:textColor="@color/lucky_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <!--    Hide text if event does not use geolocation-->

    <Button
        android:id="@+id/qrcode_button"
        style="@style/ActiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/qrscanner_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="QR Code"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/location_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/view_entrant_list_button"
        style="@style/ActiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@drawable/profile_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="Entrants"
        app:layout_constraintBottom_toTopOf="@+id/location_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/location_button"
        style="@style/ActiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/location_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="Map View"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_deadline_view_organiser" />

    <TextView
        android:id="@+id/event_countdown_view_organiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/extra_rounded_edittext"
        android:backgroundTint="@color/lucky_uiAccent"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/event_countdown_text"
        android:textAlignment="center"
        android:textColor="@color/lucky_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_view_organiser" />

    <TextView
        android:id="@+id/event_price_view_organiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/lucky_uiAccent"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        android:text="@string/event_price_text"
        android:textAlignment="center"
        android:textColor="@color/lucky_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_countdown_view_organiser" />

    <ImageButton
        android:id="@+id/event_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/event_price_view_organiser"
        app:layout_constraintTop_toBottomOf="@+id/event_countdown_view_organiser"
        app:srcCompat="@drawable/edit_picture" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>